--- a/styles.css
+++ b/styles.css
@@ -29,3 +29,30 @@ td {
 tbody button {
     margin: 0 5px;
 }
+#modal-add {
+    text-align: center;
+    width: 66%;
+    min-width: 320px;
+    max-width: 600px;
+    padding: 25px 30px;
+    border-radius: 10px;
+}
+
+form label {
+    text-align: start;
+    display: block;
+    margin: 15px 0;
+}
+
+form input {
+    width: 100%;
+    padding: 5px 10px;
+}
+
+#modal-add button {
+    margin: 30px 15px 10px;
+}
+
+dialog::backdrop {
+    background-color: rgba(0, 0, 0, 0.75);
+}
