--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ tbody button {
     margin: 4px;
 }
 
-#modal-add {
+#modal-form {
     text-align: center;
     width: 66%;
     min-width: 320px;
@@ -64,7 +64,7 @@ tbody button {
     border-radius: 10px;
 }
 
-#modal-add button {
+#modal-form button {
     margin: 20px 10px;
 }
 
